OO-7482: adding filters, review section, merging node text into instructions and fixing/refactoring